fixed text on mobile

--- a/style.css
+++ b/style.css
@@ -152,9 +152,9 @@ button {
 
   h3 {
     display: flex;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     gap: .5rem;
-    width: 13rem;
+    width: 16rem;
   
   }
 
